<resources>
    <string name="app_name">MovieApp</string>
    <string name="movie_poster_description">Movie poster</string>
    <string name="search_movies">Search Movies</string>
    <string name="enter_movie_title">Enter Movie Title</string>
    <string name="search">Search</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="imdb_rating">0.0</string>
    <string name="studio">unknown studio</string>
    <string name="_1980">1980</string>
    <string name="rating">-1</string>
    <string name="go_back">Go Back</string>
</resources>